loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:6: error: 'while' expected but 'if' found.
  if(isOverBaggle()){
  ^Poucet2:10: error: '(' expected but ';' found.
    if(baggle<=2){
^