loopdowhile.Poucet2.scala.code
var baggle:Int=0;
while(!exitReached()){
  do{
    forward();
  }
  if(isOverBaggle()){
    	baggle=baggle+1
  while(!crossing())
  }
		if(baggle<=2){
  		right();
		}
		if(baggle>=3){
  		left();
	}
}
forward();
  